--- a/gradle.properties
+++ b/gradle.properties
@@ -4,22 +4,24 @@ pluginGroup = com.zxy.ijplugin
 pluginName = wechat mini program
 pluginRepositoryUrl = https://gitee.com/zxy_c/wechat-miniprogram-plugin
 # SemVer format -> https://semver.org
-pluginVersion = 3.5.25
+pluginVersion = 3.5.26
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
-pluginSinceBuild = 243
-pluginUntilBuild = 243.*
+pluginSinceBuild = 251
+pluginUntilBuild = 251.*
 
 # IntelliJ Platform Properties -> https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#configuration-intellij-extension
 platformType = IU
-platformVersion = 2024.3
+platformVersion = 2025.1
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
-# Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
-platformPlugins = JavaScript,com.intellij.css,less,sass,org.jetbrains.plugins.stylus:243.21565.120
+# Example: platformPlugins = com.jetbrains.php:203.4449.22, org.intellij.scala:2023.3.27@EAP
+platformPlugins = org.jetbrains.plugins.stylus:251.23774.318,org.jetbrains.plugins.sass:251.23774.329,org.jetbrains.plugins.less:251.23774.329
+# Example: platformBundledPlugins = com.intellij.java
+platformBundledPlugins = JavaScript,com.intellij.css
 
 # Gradle Releases -> https://github.com/gradle/gradle/releases
-gradleVersion = 8.2.1
+gradleVersion = 8.13
 
 # Opt-out flag for bundling Kotlin standard library -> https://jb.gg/intellij-platform-kotlin-stdlib
 kotlin.stdlib.default.dependency = false
@@ -29,6 +31,3 @@ org.gradle.configuration-cache = true
 
 # Enable Gradle Build Cache -> https://docs.gradle.org/current/userguide/build_cache.html
 org.gradle.caching = true
-
-# Enable Gradle Kotlin DSL Lazy Property Assignment -> https://docs.gradle.org/current/userguide/kotlin_dsl.html#kotdsl:assignment
-systemProp.org.gradle.unsafe.kotlin.assignment = true
